--- a/server/src/main/webapp/Index.html
+++ b/server/src/main/webapp/Index.html
@@ -121,7 +121,7 @@
        					success: function (data) {
        						var body = $('#pied');
         						var parse = $.parseJSON(data);
-        						$('<h4> the number of users is: '+parse.length+' </h4>').appendTo(body);
+        						$('<h4> the number of users is: '+Object.keys(parse).length+' </h4>').appendTo(body);
        					},
        					error : function(jqXHR, textStatus, errorThrown) {
        						alert('error: ' + textStatus);
