--- a/server/src/main/webapp/Index.html
+++ b/server/src/main/webapp/Index.html
@@ -126,7 +126,7 @@
        					success: function (data) {
        					console.log("OK" + data);
        						var body = $('#pied');
-        						$('<h4> the number of users is: '+data.length+' </h4>').appendTo(body);
+        						$('<h4> Le nombre d\'utilisateurs du vélo est actuellement de : '+data.length+' </h4>').appendTo(body);
        					},
        					error : function(jqXHR, textStatus, errorThrown) {
        						alert('error: ' + textStatus);
